--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="honeydew">#F1FFF3</color>
+    <color name="light_green">#DFF7E2</color>
+    <color name="caribbean_green">#00D09E</color>
+    <color name="cyprus">#0E3E3E</color>
+    <color name="fence_green">#052224</color>
+    <color name="voidd">#031314</color>
+    <color name="light_blue">#6DB6FE</color>
+    <color name="vivid_blue">#3299FF</color>
+    <color name="ocean_blue">#0068FF</color>
+
 </resources>
