Fixed transaction icons

--- a/app/src/main/res/drawable/medicine_vector.xml
+++ b/app/src/main/res/drawable/medicine_vector.xml
@@ -1,13 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="35dp"
-    android:height="44dp"
-    android:viewportWidth="35"
-    android:viewportHeight="44">
-  <path
-      android:pathData="M6.828,18.763L22.058,24.713M24.328,21.142C26.59,21.548 28.652,22.694 30.189,24.402C31.727,26.11 32.652,28.281 32.818,30.573C32.975,32.896 32.346,35.204 31.03,37.125C29.715,39.047 27.791,40.469 25.568,41.163C24.135,41.609 22.62,41.736 21.133,41.534C19.645,41.332 18.22,40.806 16.958,39.993M31.348,26.533L17.718,35.803M22.17,2.064C26.374,3.71 28.448,8.454 26.802,12.661L17.291,36.966C15.645,41.174 10.902,43.25 6.698,41.605C2.493,39.96 0.419,35.216 2.065,31.009L11.576,6.703C13.222,2.496 17.965,0.419 22.17,2.064Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#093030"
-      android:strokeLineCap="round"/>
+    android:width="39dp"
+    android:height="50dp"
+    android:viewportWidth="39"
+    android:viewportHeight="50">
+    <path
+        android:pathData="M7.723,21.222L24.949,27.952M27.517,23.914C30.075,24.373 32.408,25.67 34.147,27.601C35.886,29.533 36.932,31.988 37.12,34.581C37.298,37.208 36.586,39.819 35.098,41.992C33.61,44.166 31.434,45.774 28.919,46.559C27.298,47.064 25.586,47.208 23.903,46.979C22.22,46.75 20.608,46.155 19.181,45.235M35.457,30.011L20.04,40.496M25.076,2.335C29.832,4.196 32.177,9.562 30.315,14.321L19.558,41.813C17.696,46.571 12.331,48.92 7.576,47.059C2.82,45.199 0.474,39.832 2.336,35.074L13.093,7.582C14.955,2.823 20.32,0.474 25.076,2.335Z"
+        android:strokeWidth="3.393"
+        android:strokeColor="#F1FFF3"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"/>
 </vector>
